--- a/RenoJavaFX/pom.xml
+++ b/RenoJavaFX/pom.xml
@@ -9,12 +9,32 @@
 	<build>
 		<plugins>
 			<plugin>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.2.1</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>app.Game</mainClass>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.0</version>
 				<configuration>
-					<release>13</release>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<release>15</release>
 				</configuration>
 			</plugin>
 
@@ -30,16 +50,17 @@
 		</plugins>
 	</build>
 
+
 	<properties>
 
 		<!-- Generic properties -->
-		<java.version>1.13</java.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<JavaFX.Version>13</JavaFX.Version>
+		<java.version>1.15</java.version>
+		<JavaFX.Version>15</JavaFX.Version>
 		<JavaFX.Platform>win</JavaFX.Platform>
 		<!-- <JavaFX.Platform>mac</JavaFX.Platform> -->
 		<!-- <JavaFX.Platform>linux</JavaFX.Platform> -->
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<!-- Spring -->
 		<spring-framework.version>5.1.8.RELEASE</spring-framework.version>
@@ -55,25 +76,25 @@
 		<junit.version>4.12</junit.version>
 
 	</properties>
-	<dependencies>
-
-		<dependency>
+	
+    <dependencies>    
+    		<dependency>
 			<groupId>cisc.udel.edu</groupId>
 			<artifactId>RenoBLL</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+		<dependency>		
 			<groupId>cisc.udel.edu</groupId>
 			<artifactId>RenoJabber</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		<dependency>
+		<dependency>		
 			<groupId>cisc.udel.edu</groupId>
 			<artifactId>RenoServer</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-
-		<dependency>
+		
+				<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
 			<version>${JavaFX.Version}</version>
@@ -102,8 +123,16 @@
 			<artifactId>javafx-fxml</artifactId>
 			<version>${JavaFX.Version}</version>
 		</dependency>
-	</dependencies>
 
+		<!-- Jackson dependency for XML manipulation -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+		
+    </dependencies>
+    
 
 
 </project>
